# H3imd3ll

./: .gitignore  Cargo.toml  README.md  graph_data.json
src/: main.rs
src/cli/: commands.rs  mod.rs  utils.rs
src/docs/: architecture.md  to-do-list.md
src/engine/: case.rs  mod.rs  reference-notes.md  search.rs  timeline.rs  utils.rs
src/graph/: entity.rs  fact.rs  graph.rs  mod.rs  relationship.rs
